--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
     -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7290715233221875"
      crossorigin="anonymous"></script>
-    <title>Izzy's self</title>
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+         <title>Izzy's self</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -41,5 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
